Added the lis tof names that show the block repeat

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,9 @@
 <div class="main-container">
 
   <span>Main Container</span>
+  <!-- Include component identified by app-name in the selector tag of the component  -->
+  <app-names></app-names>
+  <app-names></app-names>
+  <app-names></app-names>
+  <app-names></app-names>
 </div>
